Added onAndroid to package.json

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -34,7 +34,9 @@
     "start": "react-scripts start",
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "onandroid": "node node_modules/react-scripts/scripts/start.js"
+
   },
   "eslintConfig": {
     "extends": "react-app"
