--- a/lambda/proposals/package.json
+++ b/lambda/proposals/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "get-user",
+  "name": "proposals",
   "version": "1.0.0",
-  "description": "",
+  "description": "Proposals function for CPS",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "ibriz.ai",
   "license": "ISC",
   "dependencies": {
-    "redis": "^3.0.2",
-    "util": "^0.12.3"
+    "@fleekhq/fleek-storage-js": "^1.0.3",
+    "uuid": "^8.3.1"
   }
 }
