--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -35,7 +35,8 @@
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "onandroid": "node node_modules/react-scripts/scripts/start.js"
+    "onandroid": "node node_modules/react-scripts/scripts/start.js",
+    "deploy": "npm run build && export AWS_PROFILE=CPS && aws s3 sync ./build s3://cps-frontend-stage --delete"
   },
   "eslintConfig": {
     "extends": "react-app"
