--- a/lambda/proposals/package.json
+++ b/lambda/proposals/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "@fleekhq/fleek-storage-js": "^1.0.4",
+    "aws-sdk": "^2.814.0",
     "lambda-multipart-parser": "0.0.2",
+    "redis": "^3.0.2",
+    "util": "^0.12.3",
     "uuid": "^8.3.1"
   }
 }
