Handled PR multiple notifications and added invalidate script

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -37,7 +37,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "onandroid": "node node_modules/react-scripts/scripts/start.js",
-    "deploy": "npm run build && export AWS_PROFILE=CPS && aws s3 sync ./build s3://cps-frontend-stage --delete"
+    "deploy": "npm run build && export AWS_PROFILE=CPS && aws s3 sync ./build s3://cps-frontend-stage --delete",
+    "invalidate": "aws --profile CPS cloudfront create-invalidation --distribution-id E3NS1WJPVS7Y4F --paths \"/*\""
   },
   "eslintConfig": {
     "extends": "react-app"
