--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-event-timeline": "^1.6.3",
     "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
     "react-notifications": "^1.7.2",
