--- a/lambda/users/package.json
+++ b/lambda/users/package.json
@@ -9,7 +9,9 @@
   "author": "ibriz.ai",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.820.0",
     "redis": "^3.0.2",
-    "util": "^0.12.3"
+    "util": "^0.12.3",
+    "uuid": "^8.3.2"
   }
 }
