--- a/CPFTreasury/package.json
+++ b/CPFTreasury/package.json
@@ -1,5 +1,5 @@
 {
     "version": "0.0.1",
-    "main_module": "cpf",
-    "main_score": "CPF"
+    "main_module": "cpf_treasury",
+    "main_score": "CPF_TREASURY"
 }
