--- a/lambda/sam-app/package.json
+++ b/lambda/sam-app/package.json
@@ -7,10 +7,9 @@
         "@fleekhq/fleek-storage-js": "^1.0.4",
         "aws-sdk": "^2.799.0",
         "axios": "^0.21.1",
-        "lambda-multipart-parser": "0.0.2",
+        "icon-sdk-js": "0.0.19",
         "redis": "^3.1.1",
-        "util": "^0.12.3",
-        "uuid": "^8.3.1"
+        "util": "^0.12.3"
     },
     "devDependencies": {
         "jest": "^26.6.3"
