--- a/lambda/sam-app/template.yml
+++ b/lambda/sam-app/template.yml
@@ -63,6 +63,8 @@ Resources:
           API_KEY: +p9sArqKr/itlUg+AllYbw==
           API_SECRET: wtwqYMafL5kgXYKJerg66qchF2uksqThzoqAGZEy3Hg=
           REDIS_URL: redis://192.168.1.72:6379
+          CPS_SCORE: cx9f4ab72f854d3ccdc59aa6f2c3e2215dd62e879f #mainnet
+          ICON_PROVIDER: https://ctz.solidwallet.io/api/v3
       Events:
         Api:
           Type: Api
