--- a/lambda/cron/package.json
+++ b/lambda/cron/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.802.0",
+    "bignumber.js": "^9.0.1",
     "fs": "0.0.1-security",
     "icon-sdk-js": "0.0.18",
     "redis": "^3.0.2"
