--- a/lambda/sam-app/package.json
+++ b/lambda/sam-app/package.json
@@ -8,6 +8,7 @@
         "aws-sdk": "^2.799.0",
         "axios": "^0.21.1",
         "icon-sdk-js": "0.0.19",
+        "random-token": "0.0.8",
         "redis": "^3.1.1",
         "util": "^0.12.3"
     },
