--- a/lambda/sam-app/package.json
+++ b/lambda/sam-app/package.json
@@ -1,21 +1,19 @@
 {
-    "name": "delete-test-01",
-    "description": "delete-test-01-description",
-    "version": "0.0.1",
-    "private": true,
-    "dependencies": {
-        "@fleekhq/fleek-storage-js": "^1.0.4",
-        "aws-sdk": "^2.799.0",
-        "axios": "^0.21.1",
-        "icon-sdk-js": "0.0.19",
-        "random-token": "0.0.8",
-        "redis": "^3.1.1",
-        "util": "^0.12.3"
-    },
-    "devDependencies": {
-        "jest": "^26.6.3"
-    },
-    "scripts": {
-        "test": "jest"
-    }
+  "name": "cron",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "aws-sdk": "^2.802.0",
+    "axios": "^0.21.1",
+    "bignumber.js": "^9.0.1",
+    "fs": "0.0.1-security",
+    "icon-sdk-js": "0.0.18",
+    "redis": "^3.0.2"
+  }
 }
