--- a/lambda/cps-bot-triggers/package.json
+++ b/lambda/cps-bot-triggers/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@fleekhq/fleek-storage-js": "^1.0.4",
         "axios": "^0.21.1",
+        "bignumber.js": "^9.0.1",
         "icon-sdk-js": "0.0.19",
         "random-token": "0.0.8",
         "redis": "^3.1.1",
