installing react-resize-detector package

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,13 +23,17 @@
     "react-notifications": "^1.7.2",
     "react-pro-sidebar": "^0.4.4",
     "react-redux": "^7.2.1",
+    "react-resize-detector": "^6.7.6",
     "react-responsive-pagination": "^1.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-slick": "^0.28.1",
+    "react-waypoint": "^10.1.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.0"
   },
   "scripts": {
@@ -37,7 +41,8 @@
     "build": "GENERATE_SOURCEMAP=false react-scripts build && cp icon_black.png build/static &&  cp icon_blue.png build/static",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "onandroid": "node node_modules/react-scripts/scripts/start.js"
+    "onandroid": "node node_modules/react-scripts/scripts/start.js",
+    "build:win": "react-scripts build && cp icon_black.png build/static &&  cp icon_blue.png build/static"
   },
   "eslintConfig": {
     "extends": "react-app"
